Closed
Bug 1925845
Opened 1 year ago
Closed 1 year ago
[GPU-Canvas] Demo at https://davidsaltacc.github.io/pages/generative-art/skyline doesnt draw anything on the screen
Categories
(Core :: Graphics: Canvas2D, defect)
Core
Graphics: Canvas2D
Tracking
()
RESOLVED
FIXED
133 Branch
People
(Reporter: mayankleoboy1, Assigned: lsalzman)
References
(Blocks 1 open bug, Regression, )
Details
(Keywords: regression)
Attachments
(2 files)
enable gpu-canvas
Go to https://davidsaltacc.github.io/pages/generative-art/skyline
AR: Nothing is drawn on the screen
| Reporter | ||
Updated•1 year ago
|
Keywords: regression
| Reporter | ||
Comment 1•1 year ago
|
||
| Assignee | ||
Comment 2•1 year ago
|
||
Updated•1 year ago
|
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a74a6885a506
Check if path falls inside precision limits. r=aosmond
Comment 4•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox133:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
Updated•1 year ago
|
status-firefox131:
--- → disabled
status-firefox132:
--- → disabled
status-firefox-esr115:
--- → disabled
status-firefox-esr128:
--- → disabled
Regressed by: 1911231
Updated•1 year ago
|
QA Whiteboard: [qa-133b-p2]
You need to log in
before you can comment on or make changes to this bug.
Description
•