Bug 1925845 - Check if path falls inside precision limits. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D226254